--- a/literature.bib
+++ b/literature.bib
@@ -85,3 +85,24 @@ eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
   year={1999}
 }
 
+@article{xailandscape,
+      title={Landscape of R packages for eXplainable Artificial Intelligence}, 
+      author={Szymon Maksymiuk and Alicja Gosiewska and Przemyslaw Biecek},
+      year={2020},
+      journal={arXiv},
+      eprint={2009.13248},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      URL={https://arxiv.org/abs/2009.13248}
+}
+
+@article{iBreakDown,
+    title={{Do Not Trust Additive Explanations}},
+    author={Alicja Gosiewska and Przemyslaw Biecek},
+    year={2019},
+    journal = {arXiv},
+    eprint={1903.11420},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG},
+    url = {https://arxiv.org/abs/1903.11420v3}
+}
