--- a/literature.bib
+++ b/literature.bib
@@ -54,6 +54,16 @@ URL = { https://www.tandfonline.com/doi/abs/10.2307/143400},
 eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
 }
 
+@article{2-5-neighborhood4,
+  author = {Dubin, Robin A.},
+  year = {1998},
+  month = {07},
+  title = {Predicting House Prices Using Multiple Listings Data},
+  journal = {The Journal of Real Estate Finance and Economics},
+  url={https://doi.org/10.1023/A:1007751112669},
+  doi = {10.1023/A:1007751112669}
+}
+
 @inproceedings{lime,
   author    = {Marco Tulio Ribeiro and
                Sameer Singh and
@@ -106,3 +116,88 @@ eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
     primaryClass={cs.LG},
     url = {https://arxiv.org/abs/1903.11420v3}
 }
+
+@inproceedings{2-5-houseprediction-1,
+author = {Fan, Chenchen and Cui, Zechen and Zhong, Xiaofeng},
+title = {House Prices Prediction with Machine Learning Algorithms},
+year = {2018},
+isbn = {9781450363532},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3195106.3195133},
+doi = {10.1145/3195106.3195133},
+abstract = {Based on the data set compiled by D. D. Cock and the competition run by kaggle.com, we propose a house prices prediction algorithm in Ames, lowa by deliberating on data processing, feature engineering and combination forecasting. Our prediction ranks the 35th of the total 2221 results on the public leaderboard of Kaggle.com and the RMSE of predicted results after taking logarithm from all the test data is 0.12019, which shows good performance and small of over-fitting.},
+booktitle = {Proceedings of the 2018 10th International Conference on Machine Learning and Computing},
+pages = {6–10},
+numpages = {5},
+keywords = {Kaggle Competition, Combination Forecasting, House Prices Prediction, Machine Learning Algorithms},
+location = {Macau, China},
+series = {ICMLC 2018}
+}
+
+@phdthesis{2-5-houseprediction-2,
+  author = {Conway, Jennifer},
+  year = {2018},
+  month = {01},
+  url = {https://dspace.mit.edu/bitstream/handle/1721.1/120609/1088413444-MIT.pdf},
+  title = {{Artificial Intelligence and Machine Learning : Current Applications in Real Estate}}
+}
+
+@article{XAI,
+title = "Explainable Artificial Intelligence (XAI): Concepts, taxonomies, opportunities and challenges toward responsible AI",
+journal = "Information Fusion",
+volume = "58",
+pages = "82 - 115",
+year = "2020",
+issn = "1566-2535",
+url = "http://www.sciencedirect.com/science/article/pii/S1566253519308103",
+author = "Alejandro {Barredo Arrieta} and Natalia Díaz-Rodríguez and Javier {Del Ser} and Adrien Bennetot and Siham Tabik and Alberto Barbado and Salvador Garcia and Sergio Gil-Lopez and Daniel Molina and Richard Benjamins and Raja Chatila and Francisco Herrera",
+keywords = "Explainable Artificial Intelligence, Machine Learning, Deep Learning, Data Fusion, Interpretability, Comprehensibility, Transparency, Privacy, Fairness, Accountability, Responsible Artificial Intelligence"}
+
+@inproceedings{2-5-againstxai1,
+author = {Slack, Dylan and Hilgard, Sophie and Jia, Emily and Singh, Sameer and Lakkaraju, Himabindu},
+title = {Fooling LIME and SHAP: Adversarial Attacks on Post Hoc Explanation Methods},
+year = {2020},
+isbn = {9781450371100},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3375627.3375830},
+doi = {10.1145/3375627.3375830},
+booktitle = {Proceedings of the AAAI/ACM Conference on AI, Ethics, and Society},
+pages = {180–186},
+numpages = {7},
+keywords = {bias detection, model interpretability, black box explanations, adversarial attacks},
+location = {New York, NY, USA},
+series = {AIES '20}
+}
+
+
+@Article{2-5-againstxai2,
+author={Rudin, Cynthia},
+title={Stop explaining black box machine learning models for high stakes decisions and use interpretable models instead},
+journal={Nature Machine Intelligence},
+year={2019},
+month={May},
+day={01},
+volume={1},
+number={5},
+pages={206-215},
+issn={2522-5839},
+doi={10.1038/s42256-019-0048-x},
+url={https://doi.org/10.1038/s42256-019-0048-x}
+}
+
+@InProceedings{2-5-againstxai3, 
+title = {Fairwashing: the risk of rationalization}, 
+author = {Aivodji, Ulrich and Arai, Hiromi and Fortineau, Olivier and Gambs, S{\'e}bastien and Hara, Satoshi and Tapp, Alain}, 
+booktitle = {Proceedings of the 36th International Conference on Machine Learning}, pages = {161--170}, 
+year = {2019}, 
+editor = {Kamalika Chaudhuri and Ruslan Salakhutdinov}, 
+volume = {97}, 
+series = {Proceedings of Machine Learning Research},
+month = {09--15 Jun}, 
+publisher = {PMLR}, 
+pdf = {http://proceedings.mlr.press/v97/aivodji19a/aivodji19a.pdf}, 
+url = { http://proceedings.mlr.press/v97/aivodji19a.html }
+}
+
